--- a/script/choinski.net.conf
+++ b/script/choinski.net.conf
@@ -1,11 +1,35 @@
 # Domain: choinski.net
-# Public: /home/matt/app/choinski.net/
+# Public: /var/www/choinski.net/
 <VirtualHost *:80>
+
+	ServerName choinski.net
+	ServerAlias www.choinski.net choinski.net
+
+	RewriteEngine On
+	RewriteCond %{HTTPS} off
+	RewriteCond %{HTTP_HOST} ^(?:www\.)?(.*)$ [NC]
+	RewriteRule (.*) https://%1%{REQUEST_URI} [L,R=301]
+
+</VirtualHost>
+
+<VirtualHost *:443>
 	ServerName choinski.net
 	ServerAlias www.choinski.net choinski.net
 
 	DirectoryIndex index.html index.php
-	DocumentRoot /app/choinski.net/web
+	DocumentRoot /var/www/choinski.net/web
+
+	SSLEngine on
+	SSLCertificateFile /var/www/choinski.net/ssl/choinski.crt
+	SSLCertificateKeyFile /var/www/choinski.net/ssl/choinski.key
+	
+	SSLCipherSuite EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH
+	SSLProtocol All -SSLv2 -SSLv3
+	SSLHonorCipherOrder On
+
+	Header always set Strict-Transport-Security "max-age=63072000; includeSubdomains; preload"
+	Header always set X-Frame-Options DENY
+	Header always set X-Content-Type-Options nosniff
 
 	LogLevel warn
 	ErrorLog /app/choinski.net/log/error.log
